<resources>
    <string name="app_name">CHEF BURGER</string>
    <string name="header_description">Chef Burger</string>
    <string name="about">The 8th August of 2011 born CHEF BURGER COMPANY. Our goal is: ¡The Love for Burgers!</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="addDish">Add Dish</string>
    <string name="addDrink">Add Drink</string>
    <string name="title_activity_dish">Dish</string>
    <string name="title_activity_drink">Drink</string>
    <string name="evening">Night</string>
    <string name="afternoon">Afternoon</string>
    <string name="morning">Morning</string>
    <string name="nameDish">Name</string>
    <string name="priceDish">Price</string>
    <string name="ingredientsDish">Ingredients</string>
    <string name="nameDrink">Name</string>
    <string name="priceDrink">Price</string>
    <string name="ingredientsDrink">Ingredients</string>
    <string name="activityDishName">Dish</string>
    <string name="activityDrinkName">Drink</string>
    <string name="tagSchedule">Schedule</string>
    <string name="change">Change</string>
    <string name="tagDuration">Duration</string>
    <string name="duration">Time of preparation</string>
    <string name="save">Save</string>
    <string name="addMenu">Add</string>
    <string name="exit">Exit</string>
    <string name="clear">Clear</string>


</resources>
