<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dish"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="co.edu.udea.compumovil.gr01_20181.labscm20181.views.Drink">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_drink"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <RelativeLayout
        android:id="@+id/registerDrink"
        android:layout_width="0dp"
        android:layout_height="333dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/drinkRecord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/photoDrink"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="190dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_toLeftOf="@+id/nameDrink"
            android:layout_toStartOf="@+id/nameDrink"
            android:background="@android:drawable/ic_menu_camera"
            android:scaleType="centerCrop"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <EditText
            android:id="@+id/nameDrink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/nameDrink"
            android:inputType="textNoSuggestions|textCapWords"
            android:imeOptions="actionNext"
            tools:layout_editor_absoluteX="194dp"
            tools:layout_editor_absoluteY="18dp" />

        <EditText
            android:id="@+id/priceDrink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/nameDrink"
            android:layout_alignStart="@+id/nameDrink"
            android:layout_below="@+id/nameDrink"
            android:layout_marginTop="17dp"
            android:ems="10"
            android:hint="@string/priceDrink"
            android:inputType="numberDecimal"
            android:imeOptions="actionNext"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="200dp" />

        <EditText
            android:id="@+id/ingredientsDrink"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="25dp"
            android:ems="10"
            android:hint="@string/ingredientsDrink"
            android:inputType="textCapWords|textNoSuggestions"
            android:imeOptions="actionDone"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="161dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/drinkRecord"
        android:layout_width="0dp"
        android:layout_height="145dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
