<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.udea.compumovil.gr01_20181.labscm20181.views.Dish">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_dish"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:id="@+id/mainInfo"
        android:layout_width="0dp"
        android:layout_height="132dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_dish">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="148dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="13dp"
            android:layout_weight="1"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:onClick="onImageGalleryClicked"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_camera" />

        <LinearLayout
            android:id="@+id/infoDish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp">

                <EditText
                    android:id="@+id/nameDish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nameDish"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords|textNoSuggestions" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/priceDish"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/register"
        android:layout_width="0dp"
        android:layout_height="187dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainInfo">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ingredientsContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="12dp">

            <EditText
                android:id="@+id/ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ingredientsDish"
                android:imeOptions="actionDone"
                android:inputType="textCapWords|textNoSuggestions" />
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:id="@+id/checkboxSchedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="30dp"
            android:orientation="vertical">

            <com.github.clans.fab.Label
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tagSchedule"
                android:textAlignment="inherit" />

            <CheckBox
                android:id="@+id/morningCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/morning" />

            <CheckBox
                android:id="@+id/afternoonCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/afternoon" />

            <CheckBox
                android:id="@+id/eveningCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/evening" />

        </LinearLayout>

        <com.github.clans.fab.Label
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/duration"
            android:layout_alignStart="@+id/duration"
            android:layout_alignTop="@+id/checkboxSchedule"
            android:text="@string/tagDuration"
            android:textAlignment="inherit" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/label"
            android:layout_marginEnd="75dp"
            android:layout_marginRight="75dp"
            android:layout_marginTop="13dp"
            android:hint="@string/change"
            android:onClick="showPickerDialog"
            android:textSize="20sp" />

        <Button
            android:id="@+id/savebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/duration"
            android:layout_alignStart="@+id/duration"
            android:layout_alignTop="@+id/ingredientsContainer"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/save"
            android:textColor="@color/colorAccent" />

    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="368dp"
        android:layout_height="164dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/imageLoad"
            android:layout_width="112dp"
            android:layout_height="109dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.033"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameLoadContainer"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/scheduleLoadContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.58"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <com.github.clans.fab.Label
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameDish"
                android:textAlignment="inherit" />

            <TextView
                android:id="@+id/nameLoad"
                android:layout_width="171dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toTopOf="@+id/priceLoad"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.13" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/priceLoadContainer"
            android:layout_width="97dp"
            android:layout_height="45dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.091"
            app:layout_constraintStart_toStartOf="parent">

            <com.github.clans.fab.Label
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priceDish"
                android:textAlignment="inherit" />

            <TextView
                android:id="@+id/priceLoad"
                android:layout_width="79dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/durationLoad"
                app:layout_constraintHorizontal_bias="0.931"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingredientsLoad"
                app:layout_constraintVertical_bias="0.428" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ingredientsLoadContainer"
            android:layout_width="184dp"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.875"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <com.github.clans.fab.Label
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredientsDish"
                android:textAlignment="inherit" />

            <TextView
                android:id="@+id/ingredientsLoad"
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.899"
                app:layout_constraintStart_toStartOf="parent" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/scheduleLoadContainer"
            android:layout_width="199dp"
            android:layout_height="55dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="56dp"
            app:layout_constraintBottom_toTopOf="@+id/ingredientsLoadContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.953"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.125">

            <com.github.clans.fab.Label
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tagSchedule"
                android:textAlignment="inherit" />

            <TextView
                android:id="@+id/scheduleLoad"
                android:layout_width="171dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toTopOf="@+id/ingredientsLoad"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameLoad" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/durationLoadContainer"
            android:layout_width="85dp"
            android:layout_height="51dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.97"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.github.clans.fab.Label
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tagDuration"
                android:textAlignment="inherit" />

            <TextView
                android:id="@+id/durationLoad"
                android:layout_width="82dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.94" />
        </android.support.design.widget.TextInputLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
